--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
-	background-image: url("images/Bg.jpg");
-	/* background-repeat: no-repeat; */
+	background-image: url("https://www.howtogeek.com/wp-content/uploads/2018/08/shutterstock_407554567.jpg?height=200p&trim=2,2,2,2");
+	 background-repeat: no-repeat; 
 }
 
 .topnav {
