--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-	background-image: url("https://www.howtogeek.com/wp-content/uploads/2018/08/shutterstock_407554567.jpg?height=200p&trim=2,2,2,2");
+	background-image: url("https://www.howtogeek.com/wp-content/uploads/2018/08/shutterstock_407554567.jpg");
 	 background-repeat: no-repeat; 
 }
 
